added version and alerts to url schema

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,9 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
+			function handleOpenURL(url) {
+				alert("received url: " + url);
+			}
         </script>
     </body>
 </html>
