--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,11 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
+        <script type="text/javascript">
+			function handleOpenURL(url) {
+				alert("received url: " + url);
+			}
+		</script>
     </head>
     <body>
         <div class="app">
@@ -40,9 +45,6 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-			function handleOpenURL(url) {
-				alert("received url: " + url);
-			}
             app.initialize();
         </script>
     </body>
