moved handleOpenURL to head 1

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,9 @@
         <title>Hello World</title>
         <script type="text/javascript">
 			function handleOpenURL(url) {
-				alert("received url: " + url);
+				setTimeout(function(){
+					alert("x received url: " + url);
+				}, 3000);
 			}
 		</script>
     </head>
