--- a/www/index.html
+++ b/www/index.html
@@ -49,5 +49,6 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+		<script type="text/javascript" src="js/plugins/LaunchMyApp.js"></script>
     </body>
 </html>
