swithchin to local plugin

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
         <script type="text/javascript">
 			function handleOpenURL(url) {
 				setTimeout(function(){
-					alert("x received url: " + url);
+					alert("z received url: " + url);
 				}, 3000);
 			}
 		</script>
